@@ -1503,16 +1503,16 @@
 							<param name="icon" value="$VAR[WidgetStudioIconVar]"/>
 							<param name="icon_height" value="70"/>
 						</include>
-                        <include content="ImageWidget" condition="!Library.HasContent(musicvideos)">
+                     
+					</control>
+                    </control>
+                       <include content="ImageWidget" condition="!Library.HasContent(musicvideos)">
 						<param name="text_label" value="$LOCALIZE[31104]" />
 						<param name="button_label" value="$LOCALIZE[31110]" />
 						<param name="button_onclick" value="ActivateWindow(videos,files,return)"/>
 						<param name="button_id" value="16800"/>
 						<param name="button2_onclick" value="Skin.SetBool(HomeMenuNoMusicVideoButton)"/>
                         </include>
-					</control>
-                    </control>
-                    
                     <control type="group">
                     <visible>Skin.Hassetting(custommenu_4)</visible>
 					<control type="grouplist" id="16001">
